# dobo_capston_final

./: README.md
dobo_description/: dobo_camera.urdf  dobo_on_table.urdf  dobo_on_table_gripper.urdf  dobo_on_table_gripper_cam.urdf  dobo_on_table_gripper_cam_mobile.urdf
dobo_description/DOBO1/: CMakeLists.txt  package.xml
dobo_description/DORO_table/: CMakeLists.txt  package.xml
dobo_description/cam/: CMakeLists.txt  cam.urdf  package.xml
dobo_description/doro_table_mobile/: CMakeLists.txt  package.xml
dobo_description/doro_table_mobile/config/: joint_names_doro_table_mobile.yaml
dobo_description/doro_table_mobile/launch/: display.launch  gazebo.launch
dobo_description/doro_table_mobile/meshes/: shelf.STL  wheel2.STL  wheel3.STL
dobo_description/doro_table_mobile/urdf/: doro_table_mobile.csv  doro_table_mobile.urdf
dobo_description/kinect2/: kinectv2.urdf  model.config  model.sdf
dobo_description/table_lazercutter/: CMakeLists.txt  package.xml
dobo_description/table_lazercutter2/: CMakeLists.txt  package.xml
dobo_description/test_gipper/: CMakeLists.txt  package.xml
dobo_table_gripper_cam_config/: CMakeLists.txt  package.xml
dobo_table_gripper_cam_config/config/: DORO_table.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
dobo_table_gripper_cam_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  (+12 more)
(+33 files in other folders)
